refactor: migrate to spring-boot 4.x